# javaw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.manifest  vcpkg.json
src/: main.cpp  version.rc
src/gui/: App.cpp  App.hpp  Starfield.cpp  Starfield.hpp  Theme.cpp  Theme.hpp
src/report/: ReportGenerator.cpp  ReportGenerator.hpp
src/scanner/: ExternalMacroScanner.cpp  ExternalMacroScanner.hpp  MemoryScanner.cpp  MemoryScanner.hpp  ProcessEnumerator.cpp  ProcessEnumerator.hpp
